<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="fill_parent">
<!-- 
  <TextView android:id="@+id/busdeparturetitle" style="@style/HeaderTextView"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="@string/bus_departure_detail_title" /> -->

  <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="30sp" android:layout_width="wrap_content"
              android:text="@string/line" android:layout_height="wrap_content"/>
    <TextView android:paddingRight="10sp" android:layout_width="wrap_content"
              android:textSize="30sp" android:textStyle="bold" android:id="@+id/line"
              android:layout_height="wrap_content" android:layout_alignParentRight="true"/>
  </RelativeLayout>

  <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="30sp" android:text="@string/from" android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="30sp" android:layout_height="wrap_content" android:id="@+id/from"
              android:paddingRight="10sp" android:layout_alignParentRight="true"/>
  </RelativeLayout>

  <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:layout_width="wrap_content"
              android:textSize="30sp" android:text="@string/to" android:layout_height="wrap_content"/>
    <TextView android:paddingLeft="10sp" android:layout_width="wrap_content"
              android:textSize="30sp" android:id="@+id/destination"
              android:paddingRight="10sp" android:layout_height="wrap_content"
              android:layout_alignParentRight="true"/>
  </RelativeLayout>

  <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:layout_width="wrap_content"
              android:textSize="30sp" android:layout_height="wrap_content"
              android:text="@string/scheduled"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="30sp" android:textStyle="bold" android:id="@+id/scheduledtime"
              android:paddingRight="10sp" android:layout_height="wrap_content"
              android:layout_alignParentRight="true"/>
  </RelativeLayout>

  <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:layout_width="wrap_content"
              android:textSize="30sp" android:layout_height="wrap_content"
              android:text="@string/estimated"/>
    <TextView android:layout_width="wrap_content"
              android:textSize="30sp" android:textStyle="bold" android:id="@+id/estimatedtime"
              android:paddingRight="10sp" android:layout_height="wrap_content"
              android:layout_alignParentRight="true"/>
  </RelativeLayout>
</LinearLayout>
